# lshmm

./: .pre-commit-config.yaml  LICENSE  LiS_samples_variants.py  LiS_variants_samples.py  README.md  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: black.yml  ci.yml  tests.yml
_modules/: index.html
_sources/api_reference/: index.rst.txt
api_reference/: index.html
api_reference/forward_backward/: fb_diploid_samples_variants.html  fb_diploid_variants_samples.html  fb_diploid_variants_samples_tree.html  fb_haploid_samples_variants.html  fb_haploid_variants_samples.html  fb_haploid_variants_samples_tree.html  index.html
api_reference/viterbi/: index.html  vit_diploid_samples_variants.html  vit_diploid_variants_samples.html  vit_haploid_samples_variants.html  vit_haploid_variants_samples.html
docs/: conf.py  generate_api_reference.py  index.rst
lshmm/: __init__.py  api.py  core.py  fb_diploid.py  fb_haploid.py  jit.py  ls.py  vit_diploid.py  vit_diploid_samples_variants.py  vit_diploid_variants_samples.py  vit_diploid_variants_samples_tree_dict.py  vit_diploid_variants_samples_tree_vec.py  vit_haploid.py  vit_haploid_samples_variants.py  vit_haploid_variants_samples.py  vit_haploid_variants_samples_multiallelic.py  vit_haploid_variants_samples_tree.py
lshmm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lshmm/forward_backward/: fb_diploid.py  fb_diploid_samples_variants.py  fb_diploid_variants_samples.py  fb_diploid_variants_samples_tree_dict.py  fb_diploid_variants_samples_tree_vec.py  fb_haploid.py  fb_haploid_samples_variants.py  fb_haploid_variants_samples.py  fb_haploid_variants_samples_multiallelic.py  fb_haploid_variants_samples_tree.py
lshmm/viterbi/: vit_diploid_samples_variants.py  vit_diploid_variants_samples.py
notebooks/: demo_haploid.ipynb
src/: LiS_variants_samples.py  run_ls_samples_variants.py  run_ls_variants_samples.py
src/forward_backward/: fb_diploid_samples_variants.py  fb_diploid_variants_samples.py  fb_haploid_samples_variants.py  fb_haploid_variants_samples.py
tests/: lsbase.py  test_API.py  test_API_multiallelic.py  test_API_multialllelic.py  test_API_noncopy.py  test_API_noncopy_manual.py  test_LS_haploid_diploid.py  test_LS_haploid_diploid_mulitallelic.py  test_LS_haploid_multiallelic.py  test_api_diploid.py  test_api_fb_diploid.py  test_api_fb_haploid.py  test_api_fb_haploid_multi.py  test_api_haploid.py  test_api_vit_diploid.py  test_api_vit_haploid.py  test_api_vit_haploid_multi.py  test_blah.py  test_examples.py  test_non_tree.py  test_nontree_diploid.py  test_nontree_fb_diploid.py  test_nontree_fb_haploid.py  test_nontree_haploid.py  test_nontree_vit_diploid.py  test_nontree_vit_haploid.py  test_nontree_vit_haploid_fixed_switches.py  test_nontree_vit_haploid_multi.py  test_nontree_vit_haploid_tstv.py  visualise_diploid.py
(+38 files in other folders)
