[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
  # Ignore refactor and convention categories
  "R",
  "C",
  # Do not warn about TODO and FIXME comments
  "fixme",
  "E1136"
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[project]
name = "lshmm"
dynamic = [
    "version",
    "license",
    "dependencies",
    "readme",
    "classifiers",
    "requires-python",
]

[project.urls]
"Homepage" = "https://github.com/astheeggeggs/lshmm"
"Source" = "https://github.com/astheeggeggs/lshmm"
"Bug Tracker" = "https://github.com/astheeggeggs/lshmm/issues"

[tool.setuptools_scm]
write_to = "lshmm/_version.py"
