[metadata]
name = lshmm
version = 0.0.4
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Topic :: Scientific/Engineering :: Bio-Informatics
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir =
    =.
packages = find:
install_requires =
    numba
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where=.
